--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "roda-dagar",
+  "homepage": "https://ledzappa.github.io/roda-dagar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +36,8 @@
   },
   "prettier": {
     "singleQuote": true
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
