--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roda-dagar",
-  "homepage": "https://ledzappa.github.io/roda-dagar",
+  "homepage": "https://www.rodadagar.nu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
